<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/wifi_dialog_bg">
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
        android:layout_weight="1" android:background="@drawable/wifi_dialog_content_bg"
        android:orientation="vertical" android:layout_gravity="center">
        	<LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
        	    android:layout_marginTop="13dp" android:layout_marginBottom="13dp" android:orientation="horizontal"
        	    android:layout_gravity="center" android:gravity="center" android:layout_weight="1">
        	      <ImageView android:id="@+id/exit_icon"  
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content"			
					android:layout_gravity="right|center"	
					android:maxWidth="28dp"
					android:maxHeight="28dp"
					android:adjustViewBounds="true"
					android:background="@drawable/stat_sys_warning"
					android:layout_marginRight="3dp"
					/>		
        	     <TextView android:id="@+id/exit_tixing_tv" android:text="@string/exit_tixing"
					android:layout_height="wrap_content"  android:layout_width="wrap_content" android:textSize="20sp"
					android:gravity="center" android:layout_marginBottom="2dp"
					android:textColor="@color/wifidialog_normal_text_color"
					 android:textAppearance="?android:attr/textAppearanceMedium" />
        	</LinearLayout>
		
    </LinearLayout>
    
     <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
        android:layout_weight="1" android:layout_gravity="center" 
        android:orientation="horizontal" android:layout_marginTop="15dp" android:layout_marginBottom="15dp"
        android:layout_marginLeft="30dp" android:layout_marginRight="30dp">
		<Button android:id="@+id/exit_dialog_ok" android:layout_width="wrap_content" android:layout_height="wrap_content" 
		    android:layout_weight="1" android:layout_gravity="center" android:gravity="center"
		    android:text="@string/OK" android:background="@drawable/wifi_dialog_button"
		    android:textSize="19sp" android:layout_marginRight="5dp"
		    android:textColor="@color/wifidialog_normal_text_color"/>
		<Button android:id="@+id/exit_dialog_cancle" android:layout_width="wrap_content" android:layout_height="wrap_content" 
		    android:layout_weight="1" android:layout_gravity="center" android:gravity="center"
		    android:text="@string/cancle" android:background="@drawable/wifi_dialog_button" 
		    android:textSize="19sp" android:layout_marginLeft="5dp"
		    android:textColor="@color/wifidialog_normal_text_color"/>
      </LinearLayout>
    

</LinearLayout>
